<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">食旅</string>
    <string name="login_title_1">登录后更精彩</string>
    <string name="login_title_2">与全世界精彩的经历、人和故事相遇</string>
    <string name="register_new_user">注册新用户</string>
    <string name="other_ways_sign">其他登录方式</string>
    <string name="agreement">我已同意《食旅用户协议》</string>
    <string name="settings">设置</string>
    <string name="explore_title">探索</string>
    <string name="explore_text">探索</string>
    <string name="destination">目的地名称</string>
    <string name="start_point">出发点名称</string>
    <string name="date_start_text">开始日期</string>
    <string name="date_end_text">结束日期</string>
    <string name="reservation_text">可预订</string>
    <string name="by_car_text">可自驾前往</string>
    <string name="smoke_area_text">有吸烟区</string>
    <string name="btn_search_ok_text">开始搜索</string>
    <string name="budget_per">人均预算</string>
    <string name="travel_num">出行人数</string>
    <string name="estimated_travel_date">预计出行日期</string>
    <string name="check_date">请选择日期</string>
    <string name="to_text">到</string>
    <string name="play_rhythm">游玩节奏</string>
    <string name="play_rhFormat_relaxed">懒人轻松玩法：浏览时间不超过4小时/天</string>
    <string name="play_rhFormat_routine">常规玩法：浏览时间4-6小时/天</string>
    <string name="play_rhFormat_compact">行程紧凑玩法：浏览时间超过6小时/天</string>
    <string name="flavors">口味倾向</string>
    <string name="multiple_selection">可多选</string>
    <string name="acid_text">酸</string>
    <string name="sweet_text">甜</string>
    <string name="spicy_text">辣</string>
    <string name="c_text">荤</string>
    <string name="plain_text">素</string>
    <string name="c_and_plain_text">荤素参半</string>
    <string name="type_of_restaurant">餐馆类型</string>
    <string name="affordable_snacks_text">实惠小吃</string>
    <string name="specialty_flavors_text">特色风味</string>
    <string name="internet_celebrity_flavor_text">网红风味</string>
    <string name="upscale_restaurants_text">高档餐厅</string>
    <string name="high_score_evaluation_text">高分评价</string>
    <string name="must_attraction">必去景点</string>
    <string name="sure_att">确定</string>
    <string name="mode_travel_text">出行方式</string>
    <string name="public_transport_text">公共交通</string>
    <string name="by_car_text_c">自驾</string>
    <string name="charter_text">包车</string>
    <string name="walk_text">步行</string>
    <string name="travel_routes">出行路线</string>
    <string name="start_origin_text">起始地</string>
    <string name="destination_text">目的地</string>
    <string name="custom_travel_ok_text">查看专属食旅路线</string>
    <string name="menu_custom_travel">定制旅游</string>
    <string name="menu_map_experience">地图体验</string>
    <string name="menu_travel_book_sharing">游记分享</string>
    <string name="registered_title">注册食旅</string>
    <string name="registered_user_name">用户名或邮箱</string>
    <string name="registered_password">密码</string>
    <string name="registered_name">昵称</string>
    <string name="registered_btn">注册</string>
    <string name="china">中国大陆</string>
    <string name="china_hong_kong">香港</string>
    <string name="china_macau">澳门</string>
    <string name="china_taiwan">中国台湾</string>
    <string name="spinner_person_1">1人</string>
    <string name="spinner_person_2">2人</string>
    <string name="spinner_person_3">3人及以上</string>
    <string name="economically">经济</string>
    <string name="ordinary">普通</string>
    <string name="luxury">奢侈</string>
    <string name="array_age_group_0">仅成年人</string>
    <string name="array_age_group_1">成年人及小孩</string>
    <string name="array_age_group_2">仅未成年人</string>
    <string name="explore_itineraries">探索行程</string>
    <string name="top_picks">热门精选</string>
    <string name="travels_more">更多</string>
    <string name="fail">错误</string>
    <string name="fail_tips">获取资源失败，请检查网络情况或者再次刷新页面</string>
    <string name="free_travel">自由行</string>
    <string name="exotic">异域风情</string>
    <string name="notice">通知</string>
    <string name="fans">粉丝</string>
    <string name="collection">收藏</string>
    <string name="help">帮助</string>
    <string name="contact_us">联系我们</string>
    <string name="return_login">退出登录</string>
    <string name="search_hint_hot">搜索热门地点</string>
    <string name="search_hint_exotic">搜索国家</string>
    <string name="search_hint_free">搜索目的地</string>
    <string name="hot_latest_offers">最新优惠</string>
    <string name="hot_outdoor_selection">户外精选</string>
    <string name="hot_single_day">单日可来回</string>
    <string name="exotic_tile">平铺</string>
    <string name="exotic_horizontal">横排</string>
    <string name="latest_shelves">最新上架</string>
    <string name="highest_popularity">人气最高</string>
    <string name="editor_pick">编辑精选</string>
    <string name="user_ratings">用户评分</string>
    <string name="travelogues">篇游记</string>
</resources>
