<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_notice"
                android:icon="@drawable/ic_launcher_background"
                android:title="@string/notice"/>
        <item
                android:id="@+id/nav_fans"
                android:icon="@drawable/ic_launcher_background"
                android:title="@string/fans"/>
        <item
                android:id="@+id/nav_collection"
                android:icon="@drawable/ic_launcher_background"
                android:title="@string/collection"/>
    </group>
    <item android:title="">
        <menu>
            <item
                    android:id="@+id/nav_help"
                    android:icon="@drawable/ic_launcher_background"
                    android:title="@string/help"/>
            <item
                    android:id="@+id/nav_contact"
                    android:icon="@drawable/ic_launcher_background"
                    android:title="@string/contact_us"/>
        </menu>
    </item>

    <item android:id="@+id/nav_return"
          android:icon="@drawable/ic_launcher_background"
          android:title="@string/return_login"/>
</menu>
