<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <LinearLayout
            android:id="@+id/hot_layout"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
        <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
            <ImageView
                    android:background="@drawable/qq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <Button
                    android:id="@+id/latest_offers"
                    android:layout_gravity="center_vertical"
                    android:text="@string/hot_latest_offers"
                    android:background="@null"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
            <ImageView
                    android:background="@drawable/qq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <Button
                    android:id="@+id/outdoor_selection"
                    android:layout_gravity="center_vertical"
                    android:text="@string/hot_outdoor_selection"
                    android:background="@null"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
            <ImageView
                    android:background="@drawable/qq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <Button
                    android:id="@+id/single_day"
                    android:layout_gravity="center_vertical"
                    android:text="@string/hot_single_day"
                    android:background="@null"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>
    <ListView
            android:id="@+id/hot_list_view"
            android:layout_below="@+id/hot_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
</RelativeLayout>